landing spacing fix and navbar fixed mobile only

--- a/client/css/Main.css
+++ b/client/css/Main.css
@@ -13,7 +13,8 @@
 
 [data-theme="dark"] {
   /* --footer-logo: url("../assets/circle-white.png"); */
-  --body-bg-color: #131416;
+  /* --body-bg-color: #131416; */
+  --body-bg-color: #040404;
   --body-text-color: white;
   --med-gray: #969696;
   --hr-color: #333333;
